--- a/FundacionBBVA/.classpath
+++ b/FundacionBBVA/.classpath
@@ -17,6 +17,7 @@
 	<classpathentry kind="lib" path="C:/jars/ojdbc14.jar"/>
 	<classpathentry kind="lib" path="C:/jars/rig-client-fd-0.5.0.jar"/>
 	<classpathentry kind="lib" path="C:/jars/unirest-java-1.4.8.jar"/>
-	<classpathentry kind="lib" path="C:/jars/jdnipia.jar"/>
+	<classpathentry kind="lib" path="C:/jars/jdniConsulta.jar"/>
+	<classpathentry kind="lib" path="C:/jars/jdniPia.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
