--- a/reporteBEyG/bin/log4j.properties
+++ b/reporteBEyG/bin/log4j.properties
@@ -1,25 +1,28 @@
 # Archivo de configuracion Log4j.
 
 # Los niveles disponibles son DEBUG, INFO, WARN, ERROR, FATAL
-
-
-log4j.rootCategory= ALL, consol, R
-
-	
-# consol es un ConsoleAppender
-	log4j.appender.consol=org.apache.log4j.ConsoleAppender
-	log4j.appender.consol.Target=System.out
-	log4j.appender.consol.layout=org.apache.log4j.PatternLayout
-	log4j.appender.consol.layout.ConversionPattern=%d{ABSOLUTE} %-5p - %m%n
-	
-# R es un DailyRollingFileAppender
-
-	log4j.appender.R=org.apache.log4j.DailyRollingFileAppender
-	log4j.appender.R.file=E\:\\BBVA\\BEyG\\ReporteBEyG\\log.log
-	log4j.appender.R.datePattern='.'yyyy-MM-dd
-	log4j.appender.R.append=true
-	log4j.appender.R.layout=org.apache.log4j.PatternLayout
-	log4j.appender.R.layout.ConversionPattern=%d{dd-MMM-yyyy HH:mm:ss} %5p %c{2} - %m%n
-
-
-
+log4j.rootLogger=INFO, console, rollingFile
+#
+# Loggers de Fortimax
+# Los niveles disponibles son DEBUG, INFO, WARN, ERROR, FATAL
+log4j.logger.com.syc=INFO, console, rollingFile
+log4j.additivity.com.syc=false
+log4j.logger.com.bancomer=INFO, console, rollingFile
+log4j.additivity.com.bancomer=false
+log4j.logger.com.bbva=INFO, console, rollingFile
+log4j.additivity.com.bbva=false
+#
+# console es un ConsoleAppender
+#
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%r [%t] %d{dd-MMM-yyyy HH\:mm\:ss} [fortimaxCB] %-5p %c %x - %m%n
+#
+# rollingFile es un DailyRollingFileAppender
+#
+log4j.appender.rollingFile=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.rollingFile.file=logs/visorlive.log
+log4j.appender.rollingFile.datePattern='.'yyyy-MM-dd
+log4j.appender.rollingFile.append=true
+log4j.appender.rollingFile.layout=org.apache.log4j.PatternLayout
+log4j.appender.rollingFile.layout.ConversionPattern=%r [%t] %d{dd-MMM-yyyy HH\:mm\:ss} [fortimaxCB] %-5p %c %x - %m%n
